[package]
name = "aave-monitoring-tool"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.23.1"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"
reqwest = { version = "0.11", features = ["json"] }
lazy_static = "1.4.0"
ethers = { version = "2.0.14", default-features = true, features = ["ws","abigen"] }
anyhow = "1.0.32"
dotenv = "0.15.0"
alloy-sol-macro = { version = "0.4.2", default-features = false, features = ["json"] }
alloy-sol-types = { version = "0.4.2", default-features = false }
alloy-primitives = { version = "0.4.2", default-features = false }
hex-literal = "0.4.1"
borsh = { version = "0.10.3", default-features = false }
base64 = { version = "0.22.1", default-features = false, features = ["alloc"] }
chrono = "0.4"
log = "0.4.20"
env_logger = "0.7.1"
teloxide = "0.17.0"

[patch.crates-io]

